fix: --text-on doesn't work on dark mode

--- a/frappe/public/scss/common/indicator.scss
+++ b/frappe/public/scss/common/indicator.scss
@@ -3,14 +3,14 @@
 	color: var(--text-on-#{$color});
 	&::before,
 	&::after {
-		background: var(--text-on-#{$color});
+		background: var(--bg-#{$color});
 	}
 }
 
 @mixin indicator-color($color) {
 	&::before,
 	&::after {
-		background: var(--text-on-#{$color});
+		background: var(--bg-#{$color});
 	}
 }
 
